adds endpoint /queries/id/refresh
